Update 7 - hyperlinks.html

--- a/Start-HTML/7 - hyperlinks.html
+++ b/Start-HTML/7 - hyperlinks.html
@@ -42,4 +42,6 @@ Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit dolores 
 Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rerum eaque, culpa possimus praesentium ea veritatis sint quidem minima impedit modi doloremque commodi libero quo quos eos eligendi placeat nemo ipsum?
 
 <h2 id="works">Trabalhos</h2>
-Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia maiores sed et, eaque adipisci ipsum aspernatur in reiciendis dolor eligendi cumque blanditiis veritatis facere? Atque esse quidem ducimus consectetur inventore?
+
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia maiores sed et, eaque adipisci ipsum aspernatur in reiciendis dolor eligendi cumque blanditiis veritatis facere? Atque esse quidem ducimus consectetur inventore?</p>
+
