Update 8 - conteudo-a-elemento.html

--- a/Start-HTML/8 - conteudo-a-elemento.html
+++ b/Start-HTML/8 - conteudo-a-elemento.html
@@ -6,6 +6,6 @@
 
 <a href="hhtps:google.com.br" title="Ir para google"> 
     <h1>Google</h1>
-    <p>calro que posso</p>
+    <p>claro que posso</p>
     <img src="https://source.unsplash.com/random" alt="">
 </a>
